--- a/app/static/partials/join.html
+++ b/app/static/partials/join.html
@@ -38,7 +38,7 @@
                             <!-- <td>{{ nn.realtime_elapsed }} mS</td>    -->
                             <td>0</td>
                             <td><button type="button" ng-disabled="nn.clients >= nn.max_clients" ng-click="join(nn.id)" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span> Add</button></td>
-                            <td><span class="btn btn-default btn-file btn-xs"><input type="file" onchange="angular.element(this).scope().add_data(angular.element(this).scope().nn, this.files)"><span class="glyphicon glyphicon-cloud-upload"></span> Add</button></span></td>
+                            <td><span class="btn btn-default btn-file btn-xs"><input type="file" onchange="angular.element(this).scope().add_data(angular.element(this).scope().nn, this.files)" multiple><span class="glyphicon glyphicon-cloud-upload"></span> Add</button></span></td>
                             <td><a href="#/stats/{{ nn.id }}/"><button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-stats"></span></button></a></td>
                         </tr>
                     </tbody>
