fixes for ng, picture client

--- a/app/static/partials/join.html
+++ b/app/static/partials/join.html
@@ -1,4 +1,4 @@
-    <div class="container" ng-controller="join" ng-init="update_nns()">
+    <div class="container" ng-init="update_nns()">
         <div class="row">
             <div class="col-lg-12">
 
