--- a/app/static/partials/stats.html
+++ b/app/static/partials/stats.html
@@ -1,4 +1,4 @@
-    <div class="container" ng-controller="stats">
+    <div class="container">
         <div class="row">
             <div class="col-lg-8">
 
