some param changes

--- a/app/static/partials/new.html
+++ b/app/static/partials/new.html
@@ -44,6 +44,21 @@
                         <h4>Templates</h4>
                         <ul>
                             <li>
+                                <a ng-click="load_template('cifar100A')">Cifar 100 Model A</a>
+                            </li>
+                            <li>
+                                <a ng-click="load_template('cifar100B')">Cifar 100 Model B</a>
+                            </li>
+                            <li>
+                                <a ng-click="load_template('cifar100C')">Cifar 100 Model C</a>
+                            </li>
+                            <li>
+                                <a ng-click="load_template('cifar100')">Cifar 100 Model</a>
+                            </li>
+                            <li>
+                                <a ng-click="load_template('nin_cifar100_small')">Nin Cifar 100 Small</a>
+                            </li>
+                            <li>
                                 <a ng-click="load_template('simple_mnist')">Simple MNIST digit classifier</a>
                             </li>
                             <li>
@@ -51,6 +66,9 @@
                             </li>
                             <li>
                                 <a ng-click="load_template('cifar10')">Cifar 10 Model</a>
+                            </li>
+                            <li>
+                                <a ng-click="load_template('cifar10nodrop')">Cifar 10 Model (no drop)</a>
                             </li>
                             <li>
                                 <a ng-click="load_template('cifar100')">Cifar 100 Model</a>
