--- a/MLITB/static/views/new-project.html
+++ b/MLITB/static/views/new-project.html
@@ -194,10 +194,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button type="submit" ng-click="add_layer(layer.fc, conf_type)" class="btn btn-default">Add layer</button>
+                                    <button type="submit" ng-click="add_layer(layer.fc, conf_type)" class="btn btn-default">Add</button>
                                 </form>
                             </div>
-                            
+                            <br />
+                            <button type="submit" ng-click="add_nn(nn)" class="btn btn-default">Add Neural Network</button>
                          </div>
                     </form>
                 </div>
@@ -228,46 +229,10 @@
                         <strong>Configuration notes:</strong>
                         <ul>
                             <li ng-repeat="error in layer_errors">
-                                {{ error}}
+                                {{ error }}
                             </li>
                         </ul>
                     </div>
-                </div>
-                
-              </div>
-              <div class="row">
-                <div class="col-xs-6">
-                    <h4>Public client</h4>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" ng-model="nn.public_client"> Enable picture upload client
-                        </label>
-                    </div>
-
-                    <button type="submit" ng-click="add_nn(nn)" class="btn btn-default">Add Neural Network</button>
-                    <div ng-show="errors.length">
-                        <ul>
-                            <li ng-repeat="error in errors">
-                                <strong>{{ error}}</strong>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xs-6" ng-show="nn.public_client">
-                    <label for="config_overview">Public client configuration overview</label>
-                    <p>Enable / disable layer training in public client</p>
-
-                    <div ng-hide="layers.length">
-                        <p>No layers added.</p>
-                    </div>
-
-                    <ul ng-show="layers.length" class="sortable" >
-                       <li data-ng-repeat="item in layers" class="sortable-item">
-                        {{ item.type }}: {{ item.conf }}
-                        <span class="train-layer" ng-show="item.type == 'fc' || item.type == 'conv'"> Train: <input type="checkbox" ng-model="item.train"></span>
-
-                      </li>
-                    </ul>
                 </div>
               </div>
             </form>
