download parameters action implemented-does not correctly load yet

--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -100,7 +100,8 @@
                       </td>
                       <td>
                         <div ng-show="slave.type == 'track'">
-                          download | camera
+                          <a ng-click="download(slave.id)">download</a> | 
+                          camera
                         </div>
                       </td>
 
