--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -61,6 +61,7 @@
     <script src="/static/js/_bower.js"></script>
     <script src="/static/js/mlitb.js"></script>
     <script src="/static/js/webworker/megapix.js"></script>
+    <script src="/static/js/webworker/filesaver.js"></script>
     <script src="/static/js/boss.js"></script>
     <script src="/static/js/angular.js"></script>
   </body>
