camera functionality implemented; needs checking

--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -101,7 +101,7 @@
                       <td>
                         <div ng-show="slave.type == 'track'">
                           <a ng-click="download(slave.id)">download</a> | 
-                          camera
+                          <a href="#/project-index/{{ nn.id }}/slave/{{ slave.id }}/camera">camera
                         </div>
                       </td>
 
