--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -60,6 +60,8 @@
 
     <script src="/static/js/_bower.js"></script>
     <script src="/static/js/mlitb.js"></script>
+    <script src="/static/js/webworker/binaryajax.js"></script>
+    <script src="/static/js/webworker/exif.js"></script>
     <script src="/static/js/webworker/megapix.js"></script>
     <script src="/static/js/webworker/filesaver.js"></script>
     <script src="/static/js/boss.js"></script>
