changed label signaling, to add when images are uploaded

--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -58,6 +58,11 @@
 
     </div>
 
+    <script type="text/javascript">
+      var host = '<%=host %>';
+      var imagehost = '<%= imagehost %>';
+    </script>
+
     <script src="/static/js/_bower.js"></script>
     <script src="/static/js/mlitb.js"></script>
     <script src="/static/js/webworker/binaryajax.js"></script>
