critical fix in imagezip to ignore fake image files; added more image extensions; more resilient image decoder

--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -9,7 +9,7 @@
                   <th></th>
                   <th>Slaves attached</th>
                   <th>Slaves assigned</th>
-                  <th>Slaves at work</th>
+                  <th>Error</th>
                   <th>Data size</th>
                   <th>Data processed</th>
                   <th>Iteration time</th>
@@ -26,7 +26,7 @@
                   </td>
                   <td>{{ nn.slaves_connected }}</td>
                   <td>{{ nn.slaves }}</td>
-                  <td>{{ nn.slaves_operating }}</td>
+                  <td>{{ nn.error }}</td>
                   <td>{{ nn.data }}</td>
                   <td>{{ nn.data_seen }}</td>
                   <td>{{ nn.iteration_time }}</td>
