--- a/MLITB/static/views/project-index.html
+++ b/MLITB/static/views/project-index.html
@@ -14,6 +14,7 @@
                       <th>Workers</th>
                       <th>My workers</th>
                       <th>Workers connected</th>
+                      <th>Error</th>
                       <th>Iteration</th>
                       <th>Time elapsed</th>
                       <th>Data size</th>
@@ -30,6 +31,7 @@
                       <td>{{ nn.slaves }}</td>
                       <td>{{ number_of_nn_my_slaves_by_id(nn.id) }}</td>
                       <td>{{ nn.slaves_connected }}</td>
+                      <td>{{ nn.error }}</td>
                       <td>{{ nn.step }}</td>
                       <td>{{ nn.runtime_elapsed }}</td>
                       <td>{{ nn.data }}</td>
