--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -106,7 +106,8 @@
                       <td>
                         <div ng-show="slave.type == 'track'">
                           <a ng-click="download(slave.id)">download</a> | 
-                          <a href="#/project-index/{{ nn.id }}/slave/{{ slave.id }}/camera">camera
+                          <a href="#/project-index/{{ nn.id }}/slave/{{ slave.id }}/camera">camera | 
+                          <a href="#/project-index/{{ nn.id }}/slave/{{ slave.id }}/stats">stats
                         </div>
                       </td>
 
