add more configs

--- a/MLITB/static/views/new-project.html
+++ b/MLITB/static/views/new-project.html
@@ -42,13 +42,40 @@
                     <h4>Templates</h4>
                     <ul>
                       <li>
-                          <a ng-click="load_template('cifar100A')">Cifar 100 Model A</a>
+                          <a ng-click="load_template('cifar100A')">Cifar 100 Model A w/o drop out</a>
                       </li>
                       <li>
-                          <a ng-click="load_template('cifar100B')">Cifar 100 Model B</a>
+                          <a ng-click="load_template('cifar100A_drop')">Cifar 100 Model A with drop out</a>
                       </li>
                       <li>
-                          <a ng-click="load_template('cifar100C')">Cifar 100 Model C</a>
+                          <a ng-click="load_template('cifar100B')">Cifar 100 Model B w/o drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('cifar100B_drop')">Cifar 100 Model B with drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('cifar100C')">Cifar 100 Model C w/o drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('cifar100C_drop')">Cifar 100 Model C with drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetA')">ImageNet Model A w/o drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetA_drop')">ImageNet Model A with drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetB')">ImageNet Model B w/o drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetB_drop')">ImageNet Model B with drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetC')">ImageNet Model C w/o drop out</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('imagenetC_drop')">ImageNet Model C with drop out</a>
                       </li>
                         <!-- <li>
                             <a ng-click="load_template('simple_mnist')">Simple MNIST digit classifier</a>
