--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -69,6 +69,9 @@
     <script src="/static/js/webworker/exif.js"></script>
     <script src="/static/js/webworker/megapix.js"></script>
     <script src="/static/js/webworker/filesaver.js"></script>
+    <script src="/static/js/webworker/highcharts.js"></script>
+    <script src="/static/js/webworker/highcharts-more.js"></script>
+    <script src="/static/js/webworker/hc-exporting.js"></script>
     <script src="/static/js/boss.js"></script>
     <script src="/static/js/angular.js"></script>
   </body>
