public client 1st setup

--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -37,6 +37,10 @@
               </tbody>
             </table>
 
+            <a href="#/project-index/{{ nn.id }}/public" type="button" class="btn btn-success btn-md">
+              Public
+            </a>
+
             <button type="button" class="btn btn-primary btn-md" ng-click="open_hyperparameters(nn)">
               Hyperparameters
             </button>
