--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -29,7 +29,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">MLitB</a>
+            <a class="navbar-brand" href="#/home">MLitB &nbsp; <small>NIPS demo fall 2014</small></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -45,7 +45,7 @@
 
       <div ng-view></div>
 
-      <div class="container">
+      <div class="container c-log">
         <div class="row">
           <div class="col-lg-12">
 
