change so it shows the right % of working power

--- a/MLITB/static/views/detail.html
+++ b/MLITB/static/views/detail.html
@@ -37,7 +37,7 @@
               </tbody>
             </table>
 
-            <a href="#/project-index/{{ nn.id }}/public" type="button" class="btn btn-success btn-md">
+            <a href="#/project-index/{{ nn.id }}/public" target="_blank" type="button" class="btn btn-success btn-md">
               Public
             </a>
 
