--- a/MLITB/static/views/public.html
+++ b/MLITB/static/views/public.html
@@ -7,7 +7,6 @@
               <p>Welcome to the Machine Learning in the Browser NIPS 2014 demo.</p>
               <p>Click start below to begin.</p>
               <p>You can find us at <a href="https://github.com/software-engineering-amsterdam/MLitB/">https://github.com/software-engineering-amsterdam/MLitB/</a></p>
-              <p> Additional blah.</p>
 
               <button type="button" ng-click="start()" class="btn btn-success btn-lg">
                 <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
@@ -26,7 +25,6 @@
 
               <p ng-hide="slave_working"> Click 'start training' to collaborate a little of your computing power to train the network.</p>
               <p> Click 'choose or take picture' to classify an image.</p>
-              <p> More blah. </p>
 
               <div ng-hide="public_ready">
                 <p>Loading configuration...</p>
@@ -47,7 +45,7 @@
                   <p>Thank you for collaborating. Please keep this window open for awhile.</p>
                   <p>You can take pictures below and find out the network's improvement</p>
                   <button type="button" ng-click="message_be_gone = false" class="btn btn-default">
-                    Close
+                    Close message
                   </button>
                 </div>
 
