--- a/MLITB/views/index.ejs
+++ b/MLITB/views/index.ejs
@@ -29,7 +29,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">MLitB &nbsp; <small>NIPS demo fall 2014</small></a>
+            <a class="navbar-brand" href="#/nips">MLitB &nbsp; <small>NIPS demo fall 2014</small></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
