async per layer

--- a/MLITB/static/views/new-project.html
+++ b/MLITB/static/views/new-project.html
@@ -42,6 +42,12 @@
                     <h4>Templates</h4>
                     <ul>
                       <li>
+                          <a ng-click="load_template('simple_mnist')">Simple MNIST</a>
+                      </li>
+                      <li>
+                          <a ng-click="load_template('elaborate_mnist')">Elaborate MNIST</a>
+                      </li>
+                      <li>
                           <a ng-click="load_template('cifar100A')">Cifar 100 Model A w/o drop out</a>
                       </li>
                       <li>
