whitelabel, removed nips 2014 references

--- a/MLITB/static/views/index.html
+++ b/MLITB/static/views/index.html
@@ -4,8 +4,7 @@
           <div class="text-center">
           	<h2>MLitB</h2>
             <h3>Machine Learning in the Browser</h3>
-            <h4>Demo NIPS 2014</h4>
-            <p>Welcome to the Machine Learning in the Browser NIPS 2014 demo.</p>
+            <p>Welcome to the Machine Learning in the Browser.</p>
             <p>You can find us at <a href="https://github.com/software-engineering-amsterdam/MLitB/" target="_blank">https://github.com/software-engineering-amsterdam/MLitB/</a></p>
 
             <div class="row">
